@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.cosplayengine</groupId>
         <artifactId>cosplay-parent</artifactId>
-        <version>0.5.1</version>
+        <version>0.6.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -159,6 +159,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.pong.CPPongGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -175,6 +179,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.snake.CPSnakeGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -191,6 +199,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.macarena.CPMacarenaGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -207,6 +219,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.animation.CPAnimationExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -223,6 +239,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.camera.CPCameraExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -239,6 +259,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.canvas.CPCanvasExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -255,6 +279,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.fonts.CPFontsExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -271,6 +299,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.image.CPImageFormatsExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -287,6 +319,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.image.CPImageCarouselExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -303,6 +339,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.particle.CPParticleExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -319,6 +359,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.shader.CPShaderExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -335,6 +379,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.sound.CPSoundExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -351,6 +399,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.textinput.CPTextInputExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -367,6 +419,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.tilemapper.CPTileMapperExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -383,6 +439,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.video.CPVideoExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
